# ai-ignite-hero

./: .env  .env.example  .gitignore  Anchor.toml  Cargo.toml  DEMO_WALKTHROUGH.md  DEVELOPMENT_GUIDE.md  README.md  SOLANA_SETUP.md  TODO.md  calculate_pda.cjs  check_pda.ts  deploy-key.json  find_pda.cjs  find_pda.mjs  fusx-mint-keypair.json  get_pda_wsl.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  temp-check.cjs  temp-id.json  temp_policy.sql  test-kyc-raw.ts  test-kyc.ts  test-ofac.ts  test-orchestrator.ts  test-travel-rule.ts  test_output.txt  vite.config.ts  vitest.config.ts
.lovable/: plan.md
hack steps/: ComplianceVault_BuildGuide.docx  ComplianceVault_FinalBible.docx  ComplianceVault_TeamGuide.docx  kyc.env  root.env
programs/compliance-vault/: Cargo.toml
programs/compliance-vault/src/: errors.rs  lib.rs  state.rs
programs/compliance-vault/src/instructions/: close.rs  deposit.rs  fusx.rs  harvest_yield.rs  initialize.rs  invest.rs  mod.rs  pause_vault.rs  publish_reconciliation.rs  resume_vault.rs  shares.rs  solstice.rs  transfer_hook.rs  verify.rs  whitelist.rs  withdraw.rs
remotion/: package.json
scripts/: attach-metaplex-metadata.cjs  attach-metaplex-metadata.ts  brand-fusx-final-v4.ts  brand-fusx-final-v5.ts  brand-fusx-final-v6.ts  brand-fusx-final-v7.ts  check-env-key.ts  check-specific-wallet.ts  create-branded-fusx-clean.ts  create-branded-fusx-final.ts  create-branded-fusx-metaplex.cjs  create-branded-fusx-native.cjs  create-branded-fusx-raw.cjs  create-branded-fusx.ts  create-branded-spl.cjs  extract_docs.cjs  (+15 more)
(+79 files in other folders)
