[package]
name = "compliance-vault"
version = "0.1.0"
description = "Institutional Compliance Vault on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliance_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-gateway = "0.4.0"
pyth-sdk-solana = "0.10.0"
